# dotfiles

./: .aerospace.toml  .gitignore  .zshrc  README.md  setup.sh  vimium-options.json  wm.sh
apps/desktop/: wezterm.desktop
config/kitty/: kitty.conf  kitty.conf.bak
config/neorg/: README.md  README.norg  init.lua  lazy-lock.json
config/neorg/pack/dev/start/bdiagram/tree-sitter-bdiagram/: pyproject.toml  tree-sitter.json
config/neorg/pack/dev/start/bdiagram/tree-sitter-bdiagram/bindings/rust/: build.rs
config/neorg/pack/dev/start/bdiagram/tree-sitter-bdiagram/bindings/swift/TreeSitterbdiagram/: bdiagram.h
config/neorg/pack/dev/start/bdiagram/tree-sitter-bdiagram/src/: Makefile
config/nvim/: lazy-lock.json  nvim_config_backup.txt
config/nvorg/: README.md
config/wezterm/: constants.lua  status.lua  tabs.lua  utils.lua  weather.lua  wezterm.lua
etc/: environment
kitty/: kitty.conf
linux/: .Xmodmap  .xinitrc  picom.conf
linux/lightdm/: 99-monitor-setup.conf
linux/scripts/: bootstrap_input_hotplug.sh  get_lid_state.sh  i3_startup.sh  input.sh  input_watcher.sh  lightdm_monitors.sh  lock_and_input.sh  monitor_xrandr.sh  rofi_launcher.sh
linux/udev/: 99-input-hook.rules
mac/: .aerospace.toml  .skhdrc  clearnot.applescript  macnotes.md
mac/.hammerspoon/: init.lua
notes/: apps  endgoal.md  figlet  kitty-as-default.md  tuis
nvim/: README.md  coc-settings.json  init.lua  lazy-lock.json
nvim/lua/: constants.lua  utils.lua
nvorg/: init.lua  lazy-lock.json
nvorg/lua/: allplugins.lua  constants.lua
scripts/: norg2md.py
shared/: vimium-options.json
shared/config/nvc/pack/dev/start/bdiagram/tree-sitter-bdiagram/: Cargo.toml  go.mod
wezterm/: wezterm.lua
zsh/: .installs.sh.swp  .zshrc  git-helpers.sh  installs.sh  linux-path.sh  mac-linux-utils.sh  mac-path.sh  promptline.sh  worktree-helpers.sh
(+244 files in other folders)
