[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bdiagram"
description = "A syntax for using ASCII characters to create box diagrams, which can be concealed and modified"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "bdiagram"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "JR Halchak", email = "jonathan@halchak.email" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://www.github.com/jrhalchak/bdiagram"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
