[package]
name = "tree-sitter-bdiagram"
description = "A syntax for using ASCII characters to create box diagrams, which can be concealed and modified"
version = "0.1.0"
authors = ["JR Halchak <jonathan@halchak.email>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bdiagram"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://www.github.com/jrhalchak/bdiagram"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
